fix(console): prevent cell overflow for user table

--- a/packages/console/src/components/ItemPreview/index.module.scss
+++ b/packages/console/src/components/ItemPreview/index.module.scss
@@ -9,15 +9,23 @@
     margin-left: _.unit(3);
   }
 
-  .title {
-    font: var(--font-body-medium);
-    color: var(--color-text-link);
-    text-decoration: none;
-  }
+  .content {
+    padding-right: _.unit(4);
+    max-width: 100%;
 
-  .subtitle {
-    font: var(--font-body-small);
-    color: var(--color-outline);
+    .title {
+      font: var(--font-body-medium);
+      color: var(--color-text-link);
+      text-decoration: none;
+    }
+
+    .subtitle {
+      font: var(--font-body-small);
+      color: var(--color-outline);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   &.compact {
